fix(TagList): add spacing constants

--- a/src/components/TagList/_tag-list.scss
+++ b/src/components/TagList/_tag-list.scss
@@ -14,12 +14,16 @@
   }
 
   .#{$prefix}--tag-list--tag {
-    margin-right: rem(6px);
+    margin-right: $spacing-2xs;
+
+    &:last-of-type {
+      margin-right: $spacing-xs;
+    }
   }
 
   .#{$prefix}--tag-list--tag-counter {
     border-radius: 0.375rem;
-    margin-right: rem(8px);
+    margin-right: $spacing-xs;
   }
 
   .#{$prefix}--tag-list--tag-counter--icon {
@@ -27,7 +31,7 @@
     height: rem(6px);
     background-color: none;
     fill: $color__navy-gray-11;
-    margin: 0 rem(1px) 0 0;
+    margin: 0 $spacing-3xs 0 0;
   }
 
   .#{$prefix}--tag-list--edit--button {
